--- a/index.html
+++ b/index.html
@@ -285,6 +285,52 @@
   /* 📱 Responsive (Mobile Ready)    */
   /* ================================ */
   @media (max-width: 768px) {
+    /* 🔧 Responsive Header Layout */
+    .logo-parallax {
+      max-width: 70vw;
+      margin-bottom: 1.5rem;
+    }
+    .slogan-container {
+      padding: 0 1rem;
+    }
+    .slogan {
+      font-size: 1.1rem;
+      padding: 0.5rem 0;
+    }
+
+    /* 🔧 Navigation Anpassung */
+    nav {
+      flex-direction: column;
+      align-items: center;
+    }
+    nav a, .nav-cta {
+      display: block;
+      width: 100%;
+      text-align: center;
+    }
+
+    /* 🔧 Live-Banner */
+    .live-banner {
+      width: 90vw;
+      padding: 0.8rem 1rem;
+      font-size: 1rem;
+    }
+
+    /* 🔧 Services Grid besser stapeln */
+    .service-box {
+      min-width: 100%;
+    }
+
+    /* 🔧 Footer optimieren */
+    footer p {
+      font-size: 0.75rem;
+    }
+
+    /* 🔧 Kontaktformular sauberer */
+    .contact-box input,
+    .contact-box textarea {
+      font-size: 1rem;
+    }
     header {
       height: auto;
       padding: 5rem 1rem 3rem 1rem;
@@ -815,3 +861,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 $1
+
