--- a/index.html
+++ b/index.html
@@ -479,13 +479,11 @@ document.addEventListener('DOMContentLoaded', () => {
     <a href="#contact">Anfrage & Booking</a>
     <a href="#social">Soziale Medien</a>
     <a href="mailto:urbantekk@gmx.at" class="nav-cta" style="font-size: 0.85rem; padding: 0.45rem 1rem; line-height: 1; display: flex; align-items: center; justify-content: center;">Direkt Anfrage Email</a>
+    <button id="close-nav" style="display:none; background:none; border:none; color:var(--accent-color); font-size:2rem; cursor:pointer; margin-left:auto; padding:0.5rem 1rem;">✖</button>
   </nav>
 
   <button id="burger-toggle" style="display: none; position: fixed; top: 1rem; right: 1rem; background: none; border: none; color: var(--accent-color); font-size: 2rem; z-index: 1001; cursor: pointer;">
   ☰
-</button>
-<button id="close-nav" style="display: none; position: fixed; top: 1rem; right: 1rem; background: none; border: none; color: var(--primary-color); font-size: 2rem; z-index: 1002; cursor: pointer;">
-  ✖
 </button>
 
   <footer id="pageFooter" style="position: fixed; bottom: 0; left: 0; right: 0; background: #000; padding: 0.5rem 1rem; text-align: center; z-index: 1000; color: var(--muted-color); transition: transform 0.6s ease;">
