--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <button id="burger-toggle" style="display: none; position: fixed; top: 1rem; right: 1rem; background: none; border: none; color: var(--accent-color); font-size: 2rem; z-index: 1001; cursor: pointer;">
   ☰
 </button>
-<footer id="pageFooter" style="position: fixed; bottom: 0; left: 0; right: 0; background: #000; padding: 0.5rem 1rem; text-align: center; z-index: 1000; color: var(--muted-color); transition: transform 0.6s ease;">
+<footer id="pageFooter" style="bottom: 0; left: 0; right: 0; background: #000; padding: 0.5rem 1rem; text-align: center; z-index: 1000; color: var(--muted-color); transition: transform 0.6s ease;">
 <p style="margin: 0; font-size: 0.9rem; letter-spacing: 0.5px;">
     © 2025 UrbanTekk · <a href="#" style="color: var(--primary-color); text-decoration: none;">Impressum</a> · <a href="#" style="color: var(--primary-color); text-decoration: none;">Datenschutz</a>
 </p>
@@ -82,7 +82,7 @@
 </div>
 <div class="about-parallax-box">
 
-<img alt="DJ UrbanTekk Logo" src="https://i.imgur.com/7j1T1U2.png" style="border-radius: 8px; max-width: 280px; height: auto; box-shadow: 0 0 20px rgba(0,255,255,0.1);"/>
+<img alt="DJ UrbanTekk Logo" src="https://i.imgur.com/7j1T1U2.png" style="border-radius: 8px; max-width: 280px; height: auto; box-shadow: 0 0 20px rgba(0,255,255,0.1); filter: invert(1);"/>
 <p style="font-size: 1rem; max-width: 700px; color: var(--muted-color);">
 <strong>DJ UrbanTekk</strong> – Gründer, Technikliebhaber &amp; Meister des Drucks. Ob Clubnacht oder Festival: Was zählt, ist Bass mit Persönlichkeit.
       </p>
@@ -106,32 +106,32 @@
     </p>
 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 2rem;">
 <div class="service-box parallax-scroll">
-<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg>
+<i class="fas fa-bolt" style="font-size: 2rem; color: var(--accent-color);"></i>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">PA-Systeme</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Maximale Lautstärke und Klarheit – perfekt abgestimmt auf deine Location.</p>
 </div>
 <div class="service-box parallax-scroll">
-<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a7 7 0 00-7 7c0 2.21 1.2 4.15 3 5.2V17a1 1 0 001 1h6a1 1 0 001-1v-2.8a7.002 7.002 0 00-4-12.2z" /></svg>
+<i class="fas fa-lightbulb" style="font-size: 2rem; color: var(--accent-color);"></i>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Lichttechnik</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Dynamische Lichteffekte für Atmosphäre, Timing und Energie im Raum.</p>
 </div>
 <div class="service-box parallax-scroll">
-<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 18v-6a9 9 0 0118 0v6M3 18a3 3 0 003 3h0a3 3 0 003-3v-4a3 3 0 00-3-3h0a3 3 0 00-3 3v4zm18 0a3 3 0 01-3 3h0a3 3 0 01-3-3v-4a3 3 0 013-3h0a3 3 0 013 3v4z" /></svg>
+<i class="fas fa-headphones" style="font-size: 2rem; color: var(--accent-color);"></i>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">DJ-Service</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">UrbanTekk am Deck – mit echtem Gefühl für Crowd und Härtegrad.</p>
 </div>
 <div class="service-box parallax-scroll">
-<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 21v-7M4 10V3m8 18v-9m0-6V3m8 18v-5m0-4V3" /></svg>
+<i class="fas fa-sliders-h" style="font-size: 2rem; color: var(--accent-color);"></i>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Effekte &amp; Control</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">FX, Mixer, Interfaces – wir geben dir Kontrolle über den Druck.</p>
 </div>
 <div class="service-box parallax-scroll">
-<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 17v-6h4v6H3zm5-2h8v-4H8v4zm10 0h3.586L21 13.586V15a1 1 0 01-1 1h-2zM3 17a2 2 0 100 4 2 2 0 000-4zm16 0a2 2 0 100 4 2 2 0 000-4z" /></svg>
+<i class="fas fa-truck" style="font-size: 2rem; color: var(--accent-color);"></i>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Logistik &amp; Aufbau</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Schnell vor Ort, zügig aufgebaut – kein Stress, kein Hektik.</p>
 </div>
 <div class="service-box parallax-scroll">
-<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.983 2a1 1 0 01.969.75l.294 1.5a1 1 0 00.947.75l1.657.083a1 1 0 01.876.683l.624 1.506a1 1 0 00.73.645l1.634.304a1 1 0 01.684.928v2.084a1 1 0 01-.684.928l-1.634.304a1 1 0 00-.73.645l-.624 1.506a1 1 0 01-.876.683l-1.657.083a1 1 0 00-.947.75l-.294 1.5a1 1 0 01-.969.75H12a1 1 0 01-.969-.75l-.294-1.5a1 1 0 00-.947-.75l-1.657-.083a1 1 0 01-.876-.683l-.624-1.506a1 1 0 00-.73-.645l-1.634-.304A1 1 0 014 13.25v-2.084a1 1 0 01.684-.928l1.634-.304a1 1 0 00.73-.645l.624-1.506a1 1 0 01.876-.683l1.657-.083a1 1 0 00.947-.75l.294-1.5A1 1 0 0112 2z" /></svg>
+<i class="fas fa-cogs" style="font-size: 2rem; color: var(--accent-color);"></i>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Custom Pakete</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Du brauchst was Eigenes? Wir bauen dein persönliches Setup.</p>
 </div>
@@ -163,9 +163,9 @@
 <p style="font-size: 1.2rem; color: var(--muted-color); margin-bottom: 3rem;">Bleib connected: Bass. Technik. Echt UrbanTekk.</p>
 <!-- Social Links -->
 <div style="display: flex; justify-content: center; gap: 2rem;">
-<a href="https://www.instagram.com/djurbantekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="28" height="28" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm9 4h.01M12 8a4 4 0 100 8 4 4 0 000-8z"/></svg></a>
-<a href="https://www.youtube.com/@UrbanTekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="28" height="28" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 15l5.19-3L10 9v6zm11-3a9.97 9.97 0 00-.65-3.55A2.99 2.99 0 0017.7 6.3a46.1 46.1 0 00-11.4 0A2.99 2.99 0 002.65 8.45 9.97 9.97 0 002 12a9.97 9.97 0 00.65 3.55A2.99 2.99 0 006.3 17.7a46.1 46.1 0 0011.4 0 2.99 2.99 0 002.05-2.15c.41-1.13.65-2.3.65-3.55z"/></svg></a>
-<a href="https://www.facebook.com/profile.php?id=61564842964148" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="28" height="28" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3V2z"/></svg></a>
+<a href="https://www.instagram.com/djurbantekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><i class="fab fa-instagram"></i></a>
+<a href="https://www.youtube.com/@UrbanTekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><i class="fab fa-youtube"></i></a>
+<a href="https://www.facebook.com/profile.php?id=61564842964148" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><i class="fab fa-facebook"></i></a>
 </div>
 </div>
 </section>
@@ -177,8 +177,8 @@
 <p style="line-height:1.6; color:var(--muted-color); font-size:0.95rem;">
       Angaben gemäß § 5 TMG<br/><br/>
       UrbanTekk<br/>
-      Kranach 20<br/>
-      8462 Gamlitz<br/><br/>
+      Musterstraße 123<br/>
+      12345 Musterstadt<br/><br/>
       Kontakt:<br/>
       E-Mail: <a href="mailto:urbantekk@gmx.at" style="color:var(--accent-color);">urbantekk@gmx.at</a>
 </p>
@@ -192,8 +192,8 @@
       Diese Datenschutzerklärung klärt dich über die Art, den Umfang und Zweck der Verarbeitung von personenbezogenen Daten (nachfolgend kurz „Daten“) innerhalb unseres Onlineangebotes auf.<br/><br/>
 <strong>Verantwortlicher</strong><br/>
       UrbanTekk<br/>
-      Kranach 2o<br/>
-      8462 Gamlitz<br/>
+      Musterstraße 123<br/>
+      12345 Musterstadt<br/>
       E-Mail: <a href="mailto:urbantekk@gmx.at" style="color:var(--accent-color);">urbantekk@gmx.at</a><br/><br/>
 <strong>Verarbeitete Datenarten</strong><br/>
       – Bestandsdaten (z. B. Namen, Adressen)<br/>
@@ -217,6 +217,8 @@
 <span>Diese Website verwendet Cookies, um dein Erlebnis zu verbessern.</span>
 <button onclick="document.getElementById('cookie-banner').style.display='none'; localStorage.setItem('cookiesAccepted','true');" style="background:var(--primary-color); border:none; padding:0.5rem 1rem; color:#000; font-weight:bold; border-radius:6px; cursor:pointer;">Verstanden</button>
 </div>
-</html>
+</html><body>
 
-<script src="https://urbantekk.github.io/website/urbantekk.js"></script>
+<script src="https://urbantekk.github.io/website/urbantekk.js">
+  
+</script></body>
