--- a/index.html
+++ b/index.html
@@ -106,32 +106,32 @@
     </p>
 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 2rem;">
 <div class="service-box parallax-scroll">
-<i class="fas fa-bolt" style="font-size: 2rem; color: var(--accent-color);"></i>
+<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">PA-Systeme</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Maximale Lautstärke und Klarheit – perfekt abgestimmt auf deine Location.</p>
 </div>
 <div class="service-box parallax-scroll">
-<i class="fas fa-lightbulb" style="font-size: 2rem; color: var(--accent-color);"></i>
+<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a7 7 0 00-7 7c0 2.21 1.2 4.15 3 5.2V17a1 1 0 001 1h6a1 1 0 001-1v-2.8a7.002 7.002 0 00-4-12.2z"/></svg>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Lichttechnik</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Dynamische Lichteffekte für Atmosphäre, Timing und Energie im Raum.</p>
 </div>
 <div class="service-box parallax-scroll">
-<i class="fas fa-headphones" style="font-size: 2rem; color: var(--accent-color);"></i>
+<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 18v-6a9 9 0 0118 0v6M3 18a3 3 0 003 3h0a3 3 0 003-3v-4a3 3 0 00-3-3h0a3 3 0 00-3 3v4zm18 0a3 3 0 01-3 3h0a3 3 0 01-3-3v-4a3 3 0 013-3h0a3 3 0 013 3v4z"/></svg>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">DJ-Service</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">UrbanTekk am Deck – mit echtem Gefühl für Crowd und Härtegrad.</p>
 </div>
 <div class="service-box parallax-scroll">
-<i class="fas fa-sliders-h" style="font-size: 2rem; color: var(--accent-color);"></i>
+<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 21v-7M4 10V3m8 18v-9m0-6V3m8 18v-5m0-4V3"/></svg>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Effekte &amp; Control</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">FX, Mixer, Interfaces – wir geben dir Kontrolle über den Druck.</p>
 </div>
 <div class="service-box parallax-scroll">
-<i class="fas fa-truck" style="font-size: 2rem; color: var(--accent-color);"></i>
+<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 17v-6h4v6H3zm5-2h8v-4H8v4zm10 0h3.586L21 13.586V15a1 1 0 01-1 1h-2zM3 17a2 2 0 100 4 2 2 0 000-4zm16 0a2 2 0 100 4 2 2 0 000-4z"/></svg>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Logistik &amp; Aufbau</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Schnell vor Ort, zügig aufgebaut – kein Stress, kein Hektik.</p>
 </div>
 <div class="service-box parallax-scroll">
-<i class="fas fa-cogs" style="font-size: 2rem; color: var(--accent-color);"></i>
+<svg xmlns="http://www.w3.org/2000/svg" class="animated-icon" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.983 2a1 1 0 01.969.75l.294 1.5a1 1 0 00.947.75l1.657.083a1 1 0 01.876.683l.624 1.506a1 1 0 00.73.645l1.634.304a1 1 0 01.684.928v2.084a1 1 0 01-.684.928l-1.634.304a1 1 0 00-.73.645l-.624 1.506a1 1 0 01-.876.683l-1.657.083a1 1 0 00-.947.75l-.294 1.5a1 1 0 01-.969.75H12a1 1 0 01-.969-.75l-.294-1.5a1 1 0 00-.947-.75l-1.657-.083a1 1 0 01-.876-.683l-.624-1.506a1 1 0 00-.73-.645l-1.634-.304A1 1 0 014 13.25v-2.084a1 1 0 01.684-.928l1.634-.304a1 1 0 00.73-.645l.624-1.506a1 1 0 01.876-.683l1.657-.083a1 1 0 00.947-.75l.294-1.5A1 1 0 0112 2z"/></svg>
 <h3 style="margin-top: 1rem; color: var(--primary-color);">Custom Pakete</h3>
 <p style="font-size: 0.95rem; color: var(--muted-color);">Du brauchst was Eigenes? Wir bauen dein persönliches Setup.</p>
 </div>
