--- a/index.html
+++ b/index.html
@@ -156,20 +156,21 @@
 </form>
 <p style="margin-top: 1.5rem; color: var(--muted-color); font-size: 0.95rem;">Oder direkt per Mail: <a href="mailto:urbantekk@gmx.at" style="color: var(--accent-color); text-decoration: none; font-weight: bold;">urbantekk@gmx.at</a></p>
 </div></section>
-<section id="social" style="min-height: 80vh; padding: 6rem 2rem; background: linear-gradient(to bottom, #0a0a0a 0%, #111 100%); text-align: center;">
+  
+<section id="social" style="min-height: 100vh; padding: 6rem 2rem; background: linear-gradient(to bottom, #111 0%, #0a0a0a 100%); display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
 <div style="max-width: 1100px; margin: 0 auto;">
 <h2 style="font-family: 'Orbitron', sans-serif; font-size: 3rem; color: var(--accent-color); margin-bottom: 0.5rem;">Folge UrbanTekk</h2>
 <div style="width: 60px; height: 4px; background: var(--primary-color); margin: 0 auto 2rem auto; border-radius: 4px;"></div>
 <p style="font-size: 1.2rem; color: var(--muted-color); margin-bottom: 3rem;">Bleib connected: Bass. Technik. Echt UrbanTekk.</p>
 <!-- Social Links -->
 <div style="display: flex; justify-content: center; gap: 2rem;">
-<a href="https://www.instagram.com/djurbantekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><i class="fab fa-instagram"></i></a>
-<a href="https://www.youtube.com/@UrbanTekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><i class="fab fa-youtube"></i></a>
-<a href="https://www.facebook.com/profile.php?id=61564842964148" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><i class="fab fa-facebook"></i></a>
+<a href="https://www.instagram.com/djurbantekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="animated-icon glitch-icon" width="96" height="96" viewBox="0 0 24 24" fill="none" stroke="var(--accent-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg></a>
+<a href="https://www.youtube.com/@UrbanTekk" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="animated-icon glitch-icon" width="96" height="96" viewBox="0 0 24 24" fill="none" stroke="var(--accent-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.95-2C18.88 4 12 4 12 4s-6.88 0-8.59.42a2.78 2.78 0 0 0-1.95 2A29.94 29.94 0 0 0 1 12a29.94 29.94 0 0 0 .46 5.58 2.78 2.78 0 0 0 1.95 2C5.12 20 12 20 12 20s6.88 0 8.59-.42a2.78 2.78 0 0 0 1.95-2A29.94 29.94 0 0 0 23 12a29.94 29.94 0 0 0-.46-5.58z"/><polygon points="9.75 15.02 15.5 12 9.75 8.98 9.75 15.02"/></svg></a>
+<a href="https://www.facebook.com/profile.php?id=61564842964148" style="font-size: 2rem; color: var(--accent-color); transition: 0.3s;" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" class="animated-icon glitch-icon" width="96" height="96" viewBox="0 0 24 24" fill="none" stroke="var(--accent-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></a>
 </div>
 </div>
 </section>
-
+<div style="height: 30vh;"></div>
 <div id="impressum-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.9); z-index:99999; padding:4rem 2rem; overflow:auto;">
 <div style="max-width:800px; margin:0 auto; background:#111; padding:2rem; border-radius:12px; box-shadow:0 0 20px var(--primary-color); color:var(--text-color); position:relative; animation: fadeIn 0.3s ease forwards;">
 <button onclick="document.getElementById('impressum-modal').style.display='none'" style="position:absolute; top:1rem; right:1rem; background:none; border:none; color:var(--accent-color); font-size:1.5rem; cursor:pointer;">×</button>
