--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     © 2025 UrbanTekk · <a href="#" style="color: var(--primary-color); text-decoration: none;">Impressum</a> · <a href="#" style="color: var(--primary-color); text-decoration: none;">Datenschutz</a>
 </p>
 </footer>
-<header>
+<header style="text-align: center; padding: 2rem 1rem; display: flex; flex-direction: column; align-items: center; justify-content: center;">
 <div class="logo-burst"></div>
 <div class="live-banner">
 <marquee behavior="scroll" class="live-text" direction="left" scrollamount="6">
@@ -53,8 +53,8 @@
 <div id="countdown" style="margin-top: 0.5rem; font-size: 0.9rem; color: var(--muted-color); text-shadow: none;"></div>
 </div>
 <div class="header-glow"></div>
-<img alt="UrbanTekk Logo" class="logo-parallax logo-glow" src="https://i.imgur.com/7j1T1U2.png" style="max-width: 32vw; filter: invert(1) drop-shadow(0 0 6px var(--accent-color)); animation: logoFlash 4s infinite ease-in-out;"/>
-<div class="slogan-container">
+<img alt="UrbanTekk Logo" class="logo-parallax logo-glow" src="https://i.imgur.com/7j1T1U2.png" style="width: 100%; max-width: 260px; height: auto; filter: invert(1) drop-shadow(0 0 6px var(--accent-color)); animation: logoFlash 4s infinite ease-in-out; margin: 1rem auto;"/>
+<div class="slogan-container" style="padding: 1rem; font-size: 1.2rem; max-width: 90vw;">
 <p class="slogan" id="active-slogan">HardTekk. Laut. Echt. UrbanTekk.</p>
 </div>
 <button class="scroll-down" onclick="scrollToNextSection()" style="position:absolute; bottom:40px; font-size:2.5rem; color:var(--accent-color); background:none; border:none; cursor:pointer; animation:bounce 1s infinite; z-index:1;">↓</button>
@@ -87,9 +87,9 @@
 <strong>DJ UrbanTekk</strong> – Gründer, Technikliebhaber &amp; Meister des Drucks. Ob Clubnacht oder Festival: Was zählt, ist Bass mit Persönlichkeit.
       </p>
 <ul style="list-style: none; padding: 0; color: var(--muted-color); font-size: 1rem; margin-top: 1rem;">
-<li><i class="fas fa-star" style="color: var(--accent-color);"></i> Gegründet 2020 – direkt aus der Szene</li>
-<li><i class="fas fa-compact-disc" style="color: var(--accent-color);"></i> 4 Events gerockt</li>
-<li><i class="fas fa-fire" style="color: var(--accent-color);"></i> Spezialisiert auf HardTekk &amp; Tekkno Sound</li>
+<li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)" style="margin-right: 0.5rem;"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg> Gegründet 2020 – direkt aus der Szene</li>
+<li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)" style="margin-right: 0.5rem;"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="12" r="2"/></svg> 4 Events gerockt</li>
+<li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)" style="margin-right: 0.5rem;"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C9.243 5.243 8 8 8 10c0 3.314 2.686 6 6 6s6-2.686 6-6c0-2-1-5-4-8z"/></svg> Spezialisiert auf HardTekk &amp; Tekkno Sound</li>
 </ul>
 <blockquote style="font-size: 1.1rem; font-style: italic; color: var(--accent-color); margin-top: 2rem; max-width: 700px;">
         „Wir stehen für kompromisslosen Druck, ehrlichen Sound und Technik, die dich mitreißt.“
