--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="slogan-container" style="padding: 1rem; font-size: 1.2rem; max-width: 90vw;">
 <p class="slogan" id="active-slogan">HardTekk. Laut. Echt. UrbanTekk.</p>
 </div>
-<button class="scroll-down" onclick="scrollToNextSection()" style="position:absolute; bottom:40px; font-size:2.5rem; color:var(--accent-color); background:none; border:none; cursor:pointer; animation:bounce 1s infinite; z-index:1;">↓</button>
+<button class="scroll-down" onclick="scrollToNextSection()" style="position: absolute; bottom: 1rem; left: 50%; transform: translateX(-50%); font-size: clamp(2.5rem, 6vw, 4rem); color: var(--accent-color); background: none; border: none; cursor: pointer; animation: bounce 1.5s infinite; z-index: 10;">↓</button>
 <audio id="scroll-sound" preload="auto" src="https://assets.mixkit.co/sfx/preview/mixkit-fast-small-sweep-transition-166.mp3"></audio>
 </header>
 <section id="lineup" style="min-height: 100vh; padding: 6rem 2rem; background: #0a0a0a; color: var(--text-color); display: flex; flex-direction: row; align-items: center; justify-content: center; text-align: center;">
