--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div style="width: 60px; height: 4px; background: var(--accent-color); margin: 0 auto 2rem auto; border-radius: 4px;"></div>
 <p style="font-size: 1.2rem; color: var(--muted-color); margin-bottom: 2rem;">Das nächste Event von UrbanTekk auf einen Blick – wir bringen dir den Bass!</p>
 <div style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; gap: 2rem; align-items: flex-start;">
-<img alt="Event Flyer" src="https://i.imgur.com/n37IQrU.jpeg" style="max-width: 600px; width: 100%; border-radius: 12px; box-shadow: 0 0 20px rgba(0,255,255,0.1);"/>
+<img alt="Event Flyer" src="https://i.imgur.com/gKnLvd4.jpeg" style="max-width: 600px; width: 100%; border-radius: 12px; box-shadow: 0 0 20px rgba(0,255,255,0.1);"/>
 <img alt="Event Lineup" src="https://i.imgur.com/NTU7keB.jpeg" style="max-width: 600px; width: 100%; border-radius: 12px; box-shadow: 0 0 20px rgba(0,255,255,0.1);"/>
 </div>
 </div>
@@ -218,8 +218,8 @@
 <span>Diese Website verwendet Cookies, um dein Erlebnis zu verbessern.</span>
 <button onclick="document.getElementById('cookie-banner').style.display='none'; localStorage.setItem('cookiesAccepted','true');" style="background:var(--primary-color); border:none; padding:0.5rem 1rem; color:#000; font-weight:bold; border-radius:6px; cursor:pointer;">Verstanden</button>
 </div>
-</html><body>
+</html>
 
 <script src="https://urbantekk.github.io/website/urbantekk.js">
   
-</script></body>
+</script>
