--- a/index.html
+++ b/index.html
@@ -148,13 +148,7 @@
 <li>🔊 Technikbedarf oder Servicewunsch</li>
 </ul>
 <blockquote style="font-style: italic; color: var(--accent-color); font-size: 1.1rem;">„Mehr Druck, weniger Kompromisse – wir machen dein Event unvergesslich.“</blockquote>
-<form action="mailto:urbantekk@gmx.at" enctype="text/plain" method="POST" style="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem;">
-<input name="Name" placeholder="Dein Name" required="" style="padding: 0.8rem; border-radius: 6px; border: none; background: #222; color: white;" type="text"/>
-<input name="Email" placeholder="Deine E-Mail" required="" style="padding: 0.8rem; border-radius: 6px; border: none; background: #222; color: white;" type="email"/>
-<textarea name="Nachricht" placeholder="Worum geht’s?" required="" rows="4" style="padding: 0.8rem; border-radius: 6px; border: none; background: #222; color: white;"></textarea>
-<button style="padding: 1rem; background: var(--primary-color); color: #000; border: none; font-weight: bold; border-radius: 8px; cursor: pointer;" type="submit">Absenden</button>
-</form>
-<p style="margin-top: 1.5rem; color: var(--muted-color); font-size: 0.95rem;">Oder direkt per Mail: <a href="mailto:urbantekk@gmx.at" style="color: var(--accent-color); text-decoration: none; font-weight: bold;">urbantekk@gmx.at</a></p>
+<p style="margin-top: 1.5rem; color: var(--muted-color); font-size: 2.5rem;">Direkt per Mail: <a href="mailto:urbantekk@gmx.at" style="color: var(--accent-color); text-decoration: none; font-weight: bold;">urbantekk@gmx.at</a></p>
 </div></section>
   
 <section id="social" style="min-height: 100vh; padding: 6rem 2rem; background: linear-gradient(to bottom, #111 0%, #0a0a0a 100%); display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
@@ -178,8 +172,8 @@
 <p style="line-height:1.6; color:var(--muted-color); font-size:0.95rem;">
       Angaben gemäß § 5 TMG<br/><br/>
       UrbanTekk<br/>
-      Musterstraße 123<br/>
-      12345 Musterstadt<br/><br/>
+      Kranach 20<br/>
+      8462 Gamlitz<br/><br/>
       Kontakt:<br/>
       E-Mail: <a href="mailto:urbantekk@gmx.at" style="color:var(--accent-color);">urbantekk@gmx.at</a>
 </p>
@@ -193,8 +187,8 @@
       Diese Datenschutzerklärung klärt dich über die Art, den Umfang und Zweck der Verarbeitung von personenbezogenen Daten (nachfolgend kurz „Daten“) innerhalb unseres Onlineangebotes auf.<br/><br/>
 <strong>Verantwortlicher</strong><br/>
       UrbanTekk<br/>
-      Musterstraße 123<br/>
-      12345 Musterstadt<br/>
+      kranach 20<br/>
+      8462 Gamlitz<br/>
       E-Mail: <a href="mailto:urbantekk@gmx.at" style="color:var(--accent-color);">urbantekk@gmx.at</a><br/><br/>
 <strong>Verarbeitete Datenarten</strong><br/>
       – Bestandsdaten (z. B. Namen, Adressen)<br/>
