--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta content="UrbanTekk" name="author"/>
 <!-- Open Graph / Facebook -->
 <meta content="website" property="og:type"/>
-<meta content="https://urbantekk.at" property="og:url"/>
+<meta content="https://urbantekk.github.io/website" property="og:url"/>
 <meta content="UrbanTekk – HardTekk &amp; Eventtechnik" property="og:title"/>
 <meta content="Kompromissloser Sound, Live-Events und Technik für dein perfektes Tekk-Erlebnis." property="og:description"/>
 <meta content="https://i.imgur.com/7j1T1U2.png" property="og:image"/>
@@ -84,7 +84,7 @@
 
 <img alt="DJ UrbanTekk Logo" src="https://i.imgur.com/7j1T1U2.png" style="border-radius: 8px; max-width: 280px; height: auto; box-shadow: 0 0 20px rgba(0,255,255,0.1); filter: invert(1);"/>
 <p style="font-size: 1rem; max-width: 700px; color: var(--muted-color);">
-<strong>DJ UrbanTekk</strong> – Gründer, Technikliebhaber &amp; Meister des Drucks. Ob Clubnacht oder Festival: Was zählt, ist Bass mit Persönlichkeit.
+<strong>DJ UrbanTekk</strong> – Gründer, Technikliebhaber &amp; DruckTechniker. Ob Clubnacht oder Privat Event: Was zählt, ist Bass mit Persönlichkeit.
       </p>
 <ul style="list-style: none; padding: 0; color: var(--muted-color); font-size: 1rem; margin-top: 1rem;">
 <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="var(--accent-color)" style="margin-right: 0.5rem;"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg> Gegründet 2020 – direkt aus der Szene</li>
@@ -93,6 +93,7 @@
 </ul>
 <blockquote style="font-size: 1.1rem; font-style: italic; color: var(--accent-color); margin-top: 2rem; max-width: 700px;">
         „Wir stehen für kompromisslosen Druck, ehrlichen Sound und Technik, die dich mitreißt.“
+      „Events sind vergänglich – Eindrücke bleiben. Wir kümmern uns um beides.“
       </blockquote>
 </div>
 </section>
